[package]
name = "ECS140AProject1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = { version = "1", default-features = false } # nostd compatible

[[bin]]
name = "ECS140AProject1"
path = "main.rs"
